# hitori-bocchi

./: .gitignore  LICENSE  README.md  changes.md  dev-app-update.yml  electron-builder.yml  package.json  pnpm-lock.yaml
.github/: FUNDING.yml
native/bocchi-overlay/: Cargo.toml  README.md
native/bocchi-overlay/src/: bin_parser.rs  main.rs  overlay.rs  patcher.rs  skin0_swap.rs
scripts/: test-bin-parser.ts
src/main/: index.ts  logger.ts
src/main/services/: binParser.ts  championPets.ts  fantonizeSidecar.ts  gameflowMonitor.ts  githubApiService.ts  hashtableService.ts  localSkinMetadataService.ts  modToolsWrapper.ts  repositoryService.ts  skinDownloader.ts  toolsDownloader.ts  translationService.ts  updaterService.ts
src/main/types/: repository.types.ts
src/main/utils/: isPackagedApp.ts  sidecarPath.ts
src/preload/: index.d.ts  index.ts
src/renderer/src/: App.tsx
src/renderer/src/components/: ChromaSelectionDialog.tsx  DownloadedSkinsDialog.tsx  GenerateLocalFantomesDialog.tsx  ImportMethodDialog.tsx  RepositorySettings.tsx  SelectedSkinsDrawerWithP2P.tsx  SettingsDialog.tsx  TitleBar.tsx  VirtualizedChampionList.tsx  VirtualizedSkinGrid.tsx
src/renderer/src/components/layout/: AppHeader.tsx
src/renderer/src/components/sections/: SkinBrowserSection.tsx  ToolsDownloadModal.tsx
src/renderer/src/hooks/: useAppInitialization.ts  useChampionSelectHandler.ts  useP2PChampionSync.ts  usePatcherControl.ts  useSkinManagement.ts
src/renderer/src/locales/en_PH/: translation.json
src/renderer/src/locales/en_US/: translation.json
src/renderer/src/locales/es_AR/: translation.json
src/renderer/src/locales/es_ES/: translation.json
src/renderer/src/locales/es_MX/: translation.json
src/renderer/src/store/atoms/: computed.atoms.ts  settings.atoms.ts
src/shared/constants/: features.ts
src/shared/utils/: skinFilename.ts  userFantomeLookup.ts
